src/cairo-slope-private.h
@@ -57,6 +57,13 @@ _cairo_slope_equal (const cairo_slope_t *a, const cairo_slope_t *b)
 			    _cairo_int32x32_64_mul (b->dy, a->dx));
 }
 
+static inline cairo_bool_t
+_cairo_slope_backwards (const cairo_slope_t *a, const cairo_slope_t *b)
+{
+    return _cairo_int64_negative (_cairo_int64_add (_cairo_int32x32_64_mul (a->dx, b->dx),
+						    _cairo_int32x32_64_mul (a->dy, b->dy)));
+}
+
 cairo_private int
 _cairo_slope_compare (const cairo_slope_t *a,
 	              const cairo_slope_t *b) cairo_pure;
